--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^2.6.5",
-    "vue": "^2.6.10"
+    "@emmetio/codemirror-plugin": "^1.2.2",
+    "codemirror": "^5.59.4",
+    "vue": "^2.6.10",
+    "vue-codemirror": "^4.0.6"
   },
   "devDependencies": {
+    "core-js": "^2.6.5",
     "@vue/cli-plugin-babel": "^3.0.1",
     "@vue/cli-plugin-eslint": "^3.0.1",
     "@vue/cli-service": "^3.0.1",
